--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ Django==1.10.1
 idna==2.1
 lxml==3.6.4
 nltk==3.2.1
+olefile==0.44
 parsel==1.0.3
+Pillow==4.0.0
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
 pycparser==2.14
