--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ notes.txt.py
 refugee_app/refugee_app/refugee_app/settings_local.py
 notes.txt
 refugee_app/refugee_app/data.json
+refugee_app/refugee_app/*.csv
